intTests/test_type_errors/unify001.log.good
Loading file "unify001.saw"
Type errors:
  unify001.saw:8:10-8:11: Error: Type mismatch.
    Expected: String
    Found:    Int

  unify001.saw:8:14-8:20: Note: The type String arises from this type annotation
  unify001.saw:8:10-8:11: Note: The type Int arises from the type of this term


FAILED
